# model_navigator

./: .dockerignore  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  COPYRIGHT  Dockerfile  MANIFEST.in  Makefile  README.md  dev_requirements.txt  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini  versions.json
0.10.0/: 404.html
0.10.0/CHANGELOG/: index.html
0.10.0/LICENSE/: index.html
0.10.0/examples/: index.html
0.10.0/quick_start/: index.html
0.10.0/search/: search_index.json
0.10.1/: index.html  objects.inv
0.10.1/CHANGELOG/: index.html
0.10.1/CONTRIBUTING/: index.html
0.10.1/examples/: index.html
0.10.1/installation/: index.html
0.10.1/known_issues/: index.html
0.10.1/search/: search_index.json
0.10.1/support_matrix/: index.html
0.11.0/: 404.html  index.html  objects.inv  pypi.rst
0.11.0/CHANGELOG/: index.html
0.11.0/CONTRIBUTING/: index.html
0.11.0/LICENSE/: index.html
0.11.0/examples/: index.html
0.11.0/installation/: index.html
0.11.0/known_issues/: index.html
0.11.0/quick_start/: index.html
0.11.0/search/: search_index.json
0.11.0/support_matrix/: index.html
0.12.0/: 404.html  index.html  objects.inv
0.12.0/CHANGELOG/: index.html
0.12.0/CONTRIBUTING/: index.html
0.12.0/LICENSE/: index.html
0.12.0/examples/: index.html
0.12.0/installation/: index.html
0.12.0/known_issues/: index.html
0.12.0/quick_start/: index.html
0.12.0/search/: search_index.json
0.12.0/support_matrix/: index.html
0.13.0/: 404.html  index.html  objects.inv
0.13.0/CHANGELOG/: index.html
0.13.0/CONTRIBUTING/: index.html
0.13.0/LICENSE/: index.html
0.13.0/examples/: index.html
0.13.0/installation/: index.html
0.13.0/known_issues/: index.html
0.13.0/quick_start/: index.html
0.13.0/search/: search_index.json
0.13.0/support_matrix/: index.html
0.13.1/: 404.html  index.html
0.13.1/CHANGELOG/: index.html
0.13.1/CONTRIBUTING/: index.html
0.13.1/LICENSE/: index.html
0.13.1/examples/: index.html
0.13.1/installation/: index.html
0.13.1/known_issues/: index.html
0.13.1/quick_start/: index.html
0.13.1/search/: search_index.json
0.13.1/support_matrix/: index.html
0.14.0/: 404.html  index.html  objects.inv  pypi.rst
0.14.0/CHANGELOG/: index.html
0.14.0/CONTRIBUTING/: index.html
0.14.0/LICENSE/: index.html
0.14.0/examples/: index.html
0.14.0/installation/: index.html
0.14.0/known_issues/: index.html
0.14.0/quick_start/: index.html
0.14.0/search/: search_index.json
0.14.0/support_matrix/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/CHANGELOG/: index.html
0.4.0/LICENSE/: index.html
0.4.0/common/: index.html
0.4.0/examples/: index.html
0.4.0/installation/: index.html
0.4.0/jax/: index.html
0.4.0/known_issues/: index.html
0.4.0/package/: index.html
0.4.0/quick_start/: index.html
0.4.0/search/: search_index.json
0.4.0/support_matrix/: index.html
0.4.0/tensorflow/: index.html
0.4.0/tensorrt/: index.html
0.4.0/torch/: index.html
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/CHANGELOG/: index.html
0.4.1/CONTRIBUTING/: index.html
0.4.1/common/: index.html
0.4.1/onnx/: index.html
0.4.1/package/: index.html
0.4.1/pypi/: index.html
0.4.1/search/: search_index.json
0.4.1/tensorrt/: index.html
0.4.2/: 404.html  index.html  sitemap.xml
0.4.2/CHANGELOG/: index.html
0.4.2/CONTRIBUTING/: index.html
0.4.2/LICENSE/: index.html
0.4.2/common/: index.html
0.4.2/examples/: index.html
0.4.2/installation/: index.html
0.4.2/jax/: index.html
0.4.2/known_issues/: index.html
0.4.2/onnx/: index.html
0.4.3/: 404.html  index.html  sitemap.xml
0.4.4/: sitemap.xml
0.5.0/: 404.html  index.html  sitemap.xml
0.5.1/: 404.html  index.html  sitemap.xml
0.5.2/: 404.html  index.html  pypi.rst  sitemap.xml
0.5.3/: objects.inv  pypi.rst  sitemap.xml
0.5.4/: 404.html  index.html  objects.inv  pypi.rst
0.5.5/: 404.html  index.html  objects.inv
0.5.6/: 404.html  index.html
0.6.0/: 404.html  index.html  objects.inv
0.6.1/: 404.html  index.html
0.6.2/: 404.html  index.html  objects.inv
0.7.0/: index.html
0.7.1/: 404.html  objects.inv
0.7.2/: 404.html  index.html  objects.inv
0.7.3/: 404.html  index.html  objects.inv
0.7.4/: 404.html  index.html  objects.inv
0.7.5/: 404.html  index.html  objects.inv
0.7.6/: 404.html  index.html  pypi.rst
0.7.7/: 404.html  index.html  objects.inv
0.8.0/: 404.html  index.html  objects.inv
0.8.1/: 404.html  index.html
0.9.0/: 404.html  index.html  objects.inv
docker/: Dockerfile.pytorch  Dockerfile.tensorflow  Dockerfile.triton
docs/: Makefile  README.md  advanced.md  analysis.md  common.md  conf.py  config.md  conversion.md  export_from_source.md  framework_navigator.md  helm_charts.md  how_it_works.md  index.rst  installation.md  intro.md  known_issues.md  onnx.md  optimization.md  optimize_for_triton.md  overview.md  package.md  profiling.md  pypi.md  pypi.rst  quick_start.md  run.md  select.md  support_matrix.md  tensorflow.md  tensorrt.md  torch.md  triton_model_configurator.md
examples/: README.md
install_scripts/: cli.sh  jax.sh  jax_hf.sh  pyt.sh  pyt_hf.sh  tf_hf.sh
latest/: 404.html  index.html
license_templates/: license_header.txt
model_navigator/: __init__.py  __version__.py  analysis.py  analyzer.py  args.py  catalog.py  chart.py  constants.py  core.py  downloader.py  entrypoint.py  exceptions.py  execution_context.py  framework.py  log.py  logger.py  model.py  model_navigator.py  model_navigator_exceptions.py  resources.py  results.py  tensor.py  utilities.py  validators.py
scripts/: generate_docs_config.py  rewrite_links_to_repo.py
stable/: index.html  sitemap.xml
tests/: README.md  conftest.py  disabled_test_args.py  disabled_test_tensor_tf1.py  models_for_testings.py  test_cli.py  test_config.py  test_model_config.py  test_summary.py  test_tensor.py  test_tensor_pyt.py  test_tensor_tf2.py  test_triton_model_config.py  test_workspace.py  utils.py
(+2046 files in other folders)
