[bumpversion]
current_version = 0.2.7
commit = True
tag = True

[metadata]
name = model_navigator
version = attr: model_navigator.__version__.__version__
description = model_navigator provides tools supporting to create Deep Learning production ready inference services
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/triton-inference-server/model_navigator
keywords = triton inference server service nvidia tensorrt onnx tensorflow pytorch
license = Apache 2.0
classifiers =
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
	"Natural Language :: English",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires > = 3.8
install_requires =
    polygraphy>=0.33.1
	dacite>=1.6.0
	colored>=1.4.2
	coloredlogs>=15.0.0
	ruamel.yaml>=0.15.0
    typing_inspect>=0.6.0


[options.package_data]
* = Dockerfile, Dockerfile.*, templates/*.tpl, templates/*.jinja2, examples/quick-start/model.pt, version.yaml

[options.entry_points]
console_scripts =
	model-navigator = model_navigator.cli.main:main

[options.extras_require]
tf =
    onnxruntime-gpu>=1.8.0,<1.10.0
	onnx_graphsurgeon>=0.3.14
	tf2onnx>=1.9.3
	onnx>=1.8.1
pyt =
    onnxruntime-gpu>=1.8.0,<1.10.0
	onnx_graphsurgeon>=0.3.14
cloud =
	google-cloud-storage>=1.36.0
	boto3>=1.17.13
	azure-storage-blob>=12.7.0
cli =
	PyYaml>=5.2
	protobuf>=3.12.4,!=3.18.0
	docker>=4.4.1
	dockerpty>=0.4.1
	onnx>=1.8.1
	tabulate>=0.8.7
	sh>=1.14.1
	jinja2>=2.11.3
	tqdm>=4.57.0
	click>=8.0.0
	semver>=2.13.0,<3.0.0
	triton-model-analyzer>=1.13.0
	numpy>=1.22.2
huggingface =
	transformers>=4.11.3
	datasets>=1.18.3


[bumpversion:file:model_navigator/__version__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
exclude = docs
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[mypy]
python_version = 3.8
platform = linux
show_column_numbers = True
follow_imports = normal
ignore_missing_imports = True
disallow_untyped_calls = True
warn_return_any = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True
cache_dir = /dev/null

[mypy-_version]
follow_imports = skip
